netapi: add NetShareDel example code.
Guenther
(cherry picked from commit 0962128a54980b4b699ef8f80583ed2e7e12fbb0)
(cherry picked from commit 6bcb51d87671571a26366edf23a6ac6a80810f1d)

--- a/source/lib/netapi/examples/Makefile.in
+++ b/source/lib/netapi/examples/Makefile.in
@@ -50,7 +50,8 @@ PROGS = bin/getdc@EXEEXT@ \
 	bin/localgroup_setmembers@EXEEXT@ \
 	bin/localgroup_getmembers@EXEEXT@ \
 	bin/remote_tod@EXEEXT@ \
-	bin/share_add@EXEEXT@
+	bin/share_add@EXEEXT@ \
+	bin/share_del@EXEEXT@
 
 all: $(PROGS)
 
@@ -113,6 +114,7 @@ LOCALGROUPSETMEMBERS_OBJ = localgroup/localgroup_setmembers.o $(CMDLINE_OBJ)
 LOCALGROUPGETMEMBERS_OBJ = localgroup/localgroup_getmembers.o $(CMDLINE_OBJ)
 REMOTETOD_OBJ = server/remote_tod.o $(CMDLINE_OBJ)
 SHAREADD_OBJ = share/share_add.o $(CMDLINE_OBJ)
+SHAREDEL_OBJ = share/share_del.o $(CMDLINE_OBJ)
 
 bin/getdc@EXEEXT@: $(BINARY_PREREQS) $(GETDC_OBJ)
 	@echo Linking $@
@@ -249,6 +251,10 @@ bin/remote_tod@EXEEXT@: $(BINARY_PREREQS) $(REMOTETOD_OBJ)
 bin/share_add@EXEEXT@: $(BINARY_PREREQS) $(SHAREADD_OBJ)
 	@echo Linking $@
 	@$(CC) $(FLAGS) -o $@ $(SHAREADD_OBJ) $(LDFLAGS) $(DYNEXP) $(CMDLINE_LIBS)
+
+bin/share_del@EXEEXT@: $(BINARY_PREREQS) $(SHAREDEL_OBJ)
+	@echo Linking $@
+	@$(CC) $(FLAGS) -o $@ $(SHAREDEL_OBJ) $(LDFLAGS) $(DYNEXP) $(CMDLINE_LIBS)
 
 clean:
 	-rm -f $(PROGS)
