netapi: move join related examples to one directory.
Guenther
(cherry picked from commit afdd14c26c27c9fa245165985a5d8e644855c4b5)
(cherry picked from commit f589c4d486b94fc2afef11a03ae7e5dba1504d04)

--- a/source/lib/netapi/examples/Makefile.in
+++ b/source/lib/netapi/examples/Makefile.in
@@ -85,9 +85,9 @@ bin/.dummy:
 CMDLINE_OBJ = common.o
 GETDC_OBJ = getdc/getdc.o $(CMDLINE_OBJ)
 DSGETDC_OBJ = dsgetdc/dsgetdc.o $(CMDLINE_OBJ)
-NETDOMJOIN_OBJ = netdomjoin/netdomjoin.o $(CMDLINE_OBJ)
+NETDOMJOIN_OBJ = join/netdomjoin.o $(CMDLINE_OBJ)
 NETDOMJOIN_GUI_OBJ = netdomjoin-gui/netdomjoin-gui.o
-GETJOINABLEOUS_OBJ = getjoinableous/getjoinableous.o $(CMDLINE_OBJ)
+GETJOINABLEOUS_OBJ = join/getjoinableous.o $(CMDLINE_OBJ)
 RENAMEMACHINE_OBJ = join/rename_machine.o $(CMDLINE_OBJ)
 USERADD_OBJ = user/user_add.o $(CMDLINE_OBJ)
 USERDEL_OBJ = user/user_del.o $(CMDLINE_OBJ)
