netapi: add NetShareSetInfo example code.
Guenther
(cherry picked from commit a7050c999ff0a13724afbbbb2628cb47daec5b35)
(cherry picked from commit 69cd5bb6174d361abf6c292849cbf81b57c8ddee)

--- a/source/lib/netapi/examples/Makefile.in
+++ b/source/lib/netapi/examples/Makefile.in
@@ -55,7 +55,8 @@ PROGS = bin/getdc@EXEEXT@ \
 	bin/share_add@EXEEXT@ \
 	bin/share_del@EXEEXT@ \
 	bin/share_enum@EXEEXT@ \
-	bin/share_getinfo@EXEEXT@
+	bin/share_getinfo@EXEEXT@ \
+	bin/share_setinfo@EXEEXT@
 
 all: $(PROGS)
 
@@ -123,6 +124,7 @@ SHAREADD_OBJ = share/share_add.o $(CMDLINE_OBJ)
 SHAREDEL_OBJ = share/share_del.o $(CMDLINE_OBJ)
 SHAREENUM_OBJ = share/share_enum.o $(CMDLINE_OBJ)
 SHAREGETINFO_OBJ = share/share_getinfo.o $(CMDLINE_OBJ)
+SHARESETINFO_OBJ = share/share_setinfo.o $(CMDLINE_OBJ)
 
 bin/getdc@EXEEXT@: $(BINARY_PREREQS) $(GETDC_OBJ)
 	@echo Linking $@
@@ -279,6 +281,10 @@ bin/share_enum@EXEEXT@: $(BINARY_PREREQS) $(SHAREENUM_OBJ)
 bin/share_getinfo@EXEEXT@: $(BINARY_PREREQS) $(SHAREGETINFO_OBJ)
 	@echo Linking $@
 	@$(CC) $(FLAGS) -o $@ $(SHAREGETINFO_OBJ) $(LDFLAGS) $(DYNEXP) $(CMDLINE_LIBS)
+
+bin/share_setinfo@EXEEXT@: $(BINARY_PREREQS) $(SHARESETINFO_OBJ)
+	@echo Linking $@
+	@$(CC) $(FLAGS) -o $@ $(SHARESETINFO_OBJ) $(LDFLAGS) $(DYNEXP) $(CMDLINE_LIBS)
 
 clean:
 	-rm -f $(PROGS)
