build: don't install the cifs.upcall binary twice.
Guenther
(cherry picked from commit 1f44b4aaa5f700827ee2ab272ae4b59e559b094b)
(cherry picked from commit 020c03bff844ef976dd786a755c4d682bf161a3d)
(cherry picked from commit 5a9a190a5588b0cf938bc5c9659b7704d18cd4a3)
(cherry picked from commit c83295d3b575be80a432c4716be62cd63eb3bdef)
(cherry picked from commit cfc8dc236dda869dbe4141bef80f6965ce76188d)

--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -175,7 +175,7 @@ PATH_FLAGS = -DSMB_PASSWD_FILE=\"$(SMB_PASSWD_FILE)\" \
 
 # Note that all executable programs now provide for an optional executable suffix.
 
-SBIN_PROGS = bin/smbd@EXEEXT@ bin/nmbd@EXEEXT@ @SWAT_SBIN_TARGETS@ @EXTRA_SBIN_PROGS@ @CIFSUPCALL_PROGS@
+SBIN_PROGS = bin/smbd@EXEEXT@ bin/nmbd@EXEEXT@ @SWAT_SBIN_TARGETS@ @EXTRA_SBIN_PROGS@
 
 ROOT_SBIN_PROGS = @CIFSMOUNT_PROGS@
 
