netapi: add NetFileClose skeleton.
Guenther
(cherry picked from commit 4a006ae644bd85b670aab835dc7d90dadaec3503)

--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -1837,7 +1837,8 @@ LIBNETAPI_OBJ0 = lib/netapi/netapi.o \
 		 lib/netapi/localgroup.o \
 		 lib/netapi/samr.o \
 		 lib/netapi/sid.o \
-		 lib/netapi/share.o
+		 lib/netapi/share.o \
+		 lib/netapi/file.o
 
 LIBNETAPI_OBJ  = $(LIBNETAPI_OBJ0) $(LIBNET_OBJ) \
 		 $(LIBSMBCONF_OBJ) \
