--- a/source3/configure.in
+++ b/source3/configure.in
@@ -131,8 +131,6 @@ else
 	CFLAGS="-O"
 fi
 
-CFLAGS="${CFLAGS} -D_SAMBA_BUILD_=3"
-
 m4_include(lib/socket_wrapper/config.m4)
 m4_include(lib/nss_wrapper/config.m4)
 
@@ -6199,6 +6197,13 @@ MSG
 	])
 
 fi
+
+esyscmd([test -d ../samba4])
+ifelse(sysval,0,[
+AC_SUBST(MERGED_BUILD)
+MERGED_BUILD=1
+m4_include(samba4.m4)
+],[])
 
 dnl Remove -L/usr/lib/? from LDFLAGS and LIBS
 LIB_REMOVE_USR_LIB(LDFLAGS)
