--- a/source3/configure.in
+++ b/source3/configure.in
@@ -6198,12 +6198,13 @@ MSG
 
 fi
 
-esyscmd([test -d ../samba4])
-ifelse(sysval,0,[
-AC_SUBST(MERGED_BUILD)
-MERGED_BUILD=1
-m4_include(samba4.m4)
-],[])
+AC_ARG_ENABLE(merged-build, 
+[AS_HELP_STRING([--enable-merged-build], [Build Samba 4 as well])])
+
+if test x$enable_merged_build = xyes; then
+	MERGED_BUILD=1
+	m4_include(samba4.m4)
+fi
 
 dnl Remove -L/usr/lib/? from LDFLAGS and LIBS
 LIB_REMOVE_USR_LIB(LDFLAGS)
