Share talloc source code between Samba 3 and Samba 4.

--- a/source4/Makefile
+++ b/source4/Makefile
@@ -103,6 +103,7 @@ pyscriptsrcdir := $(srcdir)/scripting/python
 kdcsrcdir := kdc
 ntp_signdsrcdir := ntp_signd
 wmisrcdir := lib/wmi
+tallocsrcdir := ../talloc
 
 include data.mk
 
