Use single copy of socket_wrapper in Samba 3 and Samba 4.

--- a/source4/Makefile
+++ b/source4/Makefile
@@ -71,7 +71,7 @@ libmessagingsrcdir := lib/messaging
 libeventssrcdir := lib/events
 libcmdlinesrcdir := lib/cmdline
 poptsrcdir := lib/popt
-socketwrappersrcdir := lib/socket_wrapper
+socketwrappersrcdir := ../socket_wrapper
 nsswrappersrcdir := lib/nss_wrapper
 appwebsrcdir := lib/appweb
 libstreamsrcdir := lib/stream
