--- a/source3/configure.in
+++ b/source3/configure.in
@@ -131,7 +131,7 @@ else
 	CFLAGS="-O"
 fi
 
-m4_include(lib/socket_wrapper/config.m4)
+m4_include(../socket_wrapper/config.m4)
 m4_include(lib/nss_wrapper/config.m4)
 
 m4_include(m4/swat.m4)
