Use single cope of nss_wrapper in Samba 3 and Samba 4.

--- a/source4/Makefile
+++ b/source4/Makefile
@@ -72,7 +72,7 @@ libeventssrcdir := lib/events
 libcmdlinesrcdir := lib/cmdline
 poptsrcdir := lib/popt
 socketwrappersrcdir := lib/socket_wrapper
-nsswrappersrcdir := lib/nss_wrapper
+nsswrappersrcdir := ../nss_wrapper
 appwebsrcdir := lib/appweb
 libstreamsrcdir := lib/stream
 libutilsrcdir := lib/util
