--- a/source4/configure.ac
+++ b/source4/configure.ac
@@ -21,7 +21,7 @@ m4_include(lib/util/fsusage.m4)
 m4_include(lib/util/xattr.m4)
 m4_include(lib/util/capability.m4)
 m4_include(lib/util/time.m4)
-m4_include(lib/popt/samba.m4)
+m4_include(../popt/samba.m4)
 m4_include(lib/charset/config.m4)
 m4_include(lib/socket/config.m4)
 m4_include(lib/zlib.m4)
