--- a/source4/Makefile
+++ b/source4/Makefile
@@ -81,7 +81,7 @@ libdbwrapsrcdir := lib/dbwrap
 libcryptosrcdir := lib/crypto
 libtorturesrcdir := lib/torture
 smb_serversrcdir := smb_server
-libcompressionsrcdir := lib/compression
+libcompressionsrcdir := ../compression
 libgencachesrcdir := lib
 paramsrcdir := param
 rpc_serversrcdir := rpc_server
