[s3]build: add dependency to libsmbclient to libsmbclient_examples target
Michael

--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -2728,7 +2728,7 @@ valgrindtest:: all torture timelimit
 ## Examples:
 ##
 
-libsmbclient_examples:
+libsmbclient_examples: libsmbclient
 	$(MAKE) -C ../examples/libsmbclient -f Makefile.internal
 
 clean_libsmbclient_examples:
